# intrinsic_value

./: .gitignore  Dockerfile  LICENSE  README.md  dagster_cloud.yaml  dbt_project.yml  example.env  filesystem_pipeline.py  intrinsic_app.py  pipeline.sh  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: aws.yml  balance_sheets.yaml  branch_deployments.yml  closing_data.yaml  dagster_plus_deploy.yaml  deploy.yml  google_sheets.yaml  prepare_analytics.yaml  update_motherduck.yaml
app/: Home.py  Intrinsic.py  Recommendations.py  requirements.txt
app/helpers/: __init__.py  analysis.py  config.py  lang.py  load.py  portfolio_data.py  recommendations.py  state.py
app/pages/: 1_Buy_Recommendations.py  2_Sell_Recommendations.py  3_Dashboard.py  Methodology.py  portfolio.py
ingestion/: README.md  destination.py  filesystem_pipeline.py  google_sheets_pipeline.py  scraping_pipeline.py  yfinance_pipeline.py
ingestion/google_sheets/: __init__.py
ingestion/google_sheets/helpers/: sanitize_name.py
ingestion/scraping/: README.md
macros/: compute_intrinsic_value.sql
models/marts/: intrinsic_value.sql
models/staging/fundamentus/: _fundamentus__models.yml  stg_fundamentus__historical_earnings.sql
orchestration/: definitions.py
orchestration/defs/: branch_deployments.py  ingestion.py  transformation.py
scripts/: intrinsic_value.py
sources/: fundamentus.yml
src/app/helpers/: lang.py
src/orchestration/: definitions.py
transformation/: .user.yml  dbt_project.yml  profiles.yml
transformation/macros/: compute_intrinsic_value.sql  schema.yml
transformation/seeds/: industry_translation.csv
transformation/tests/: assert_row_count.sql  model_params_row_count_is_one.sql  schema.yml
(+19 files in other folders)
