[project]
name = "intrinsic-value"
version = "0.1.0"
description = "A data-driven app to construct value investing portfolios for the Brazilian Stock Exchange, grounded in the principle of margin of safety."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.2",
    "dagster-cloud>=1.11.2",
    "dagster-dbt>=0.27.2",
    "dagster-dg-cli>=1.11.2",
    "dagster-dlt>=0.27.2",
    "dagster-duckdb>=0.27.2",
    "dagster-webserver>=1.11.2",
    "dbt-core>=1.10.4",
    "dbt-duckdb>=1.9.4",
    "dlt[motherduck]>=1.13.0",
    "duckdb<1.3.0",
    "google-api-python-client>=2.176.0",
    "psutil>=7.0.0",
    "yfinance>=0.2.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
